axis offencives - done

--- a/localisation/english/decisions_l_english.yml
+++ b/localisation/english/decisions_l_english.yml
@@ -396,5 +396,7 @@
   GER_prep_1:0 "Prepare Air Fields"
   GER_prep_2:0 "Prepare Railroads"
   GER_blitzkrieg_mission:0 "Blitz them up!"
-  GER_forty_two_summer_offencive_moscau:0 "Aim: Moscau"
-  GER_forty_two_summer_offencive_stalingrad:0 "Aim: Stalingrad"
+  GER_prep_summer_offencive_moscau:0 "Prep Summer Offencive on Moscau"
+  GER_summer_offencive_moscau_mission:0 "Aim: Moscau"
+  GER_prep_summer_offencive_stalingrad:0 "Prep Summer Offencive on Stalingrad"
+  GER_summer_offencive_stalingrad_mission:0 "Aim: Stalingrad"
