soviet focus and other kind of improvements suggested by SANJ

--- a/localisation/english/ideas_l_english.yml
+++ b/localisation/english/ideas_l_english.yml
@@ -2722,6 +2722,7 @@
  ic_SOV_mass_production:0 "§OEveryone's gangsta, untill Russia starts§!\n§RMASS PRODUCTION§!"
  SOV_ukrain_prom_compleks:0 "Ukrain PromCompleks"
  SOV_making_use_of_the_storehouse_of_russia:0 "Making Use of the Storehouse of Russia"
+ SOV_summer_defencive_buff:0 "Soviet Defence In-Depth"
  GER_summer_offencive_buff:0 "Axis Summer Offencive Buff"
 
 
