--- a/localisation/english/traits_l_english.yml
+++ b/localisation/english/traits_l_english.yml
@@ -1608,3 +1608,4 @@
  A_nuclear_scientist_but_crazy:0 "Nuclear scientist (crazy one)"
  minister_of_proparanda:0 "Minister of propaganda"
  fuhrers_fireman:0 "Fuhrers Fireman"
+ speer_trait:0 "Mils Reorganizer"
