more sov forts, sov 1941 defencive, error fixes

--- a/localisation/english/decisions_l_english.yml
+++ b/localisation/english/decisions_l_english.yml
@@ -288,8 +288,11 @@
   SOV_faq_event:0 "faq - SOV"
   GER_faq_event:0 "faq - GER"
 
-  SOV_ukrain_promkompleks_tip:0 "Show states affected by Ukrain PromKomplect"
-  SOV_russian_storehouse_tip:0 "Show states affected by Russian Storehouse"
+  SOV_secure_north_1941_tip:0 "Show states affected by \n§HSoviet North Defence In-Depth§!"
+  SOV_secure_center_1941_tip:0 "Show states affected by \n§HSoviet Center Defence In-Depth§!"
+  SOV_secure_south_1941_tip:0 "Show states affected by \n§HSoviet South Defence In-Depth§!"
+  SOV_ukrain_promkompleks_tip:0 "Show states affected by §HUkrain PromKomplect§!"
+  SOV_russian_storehouse_tip:0 "Show states affected by §HRussian Storehouse§!"
   SOV_debug_cze:0 "debug thingy for CZE annex"
   SOV_debug_pol:0 "debug thingy for baltiks, pol and bessarabia"
 
@@ -318,7 +321,12 @@
   SOV_forts_krasnaya_gorka:0 "Krasnaya Gorka Forts"
   SOV_forts_maxim_gorki:0 "Maxim Gorki Forts"
   SOV_forts_vitebsk_ukrep_rayon:0 "Vitebskiy UkrepRayon"
+  SOV_forts_zhytomyr_ukrep_rayon:0 "Zhytomyrski UkrepRayon"
+  SOV_forts_mozir_ukrep_rayon:0 "Mozirski UkrepRayon"
   SOV_forts_kiev_ukrep_rayon:0 "Kievskiy UkrepRayon"
+  SOV_forts_dnepropetrovsk_ukrep_rayon:0 "Dnepropetrovski UkrepRayon"
+  SOV_forts_uzjni_buk_river_ukrep_rayon:0 "Uzjni Buk River UkrepRayon"
+  SOV_forts_dnestr_river_ukrep_rayon:0 "Dnestr River UkrepRayon"
   SOV_forts_mojaisk_line_first:0 "Mojaiskata Liniya Oboroni, First Line"
   SOV_forts_mojaisk_line_second:0 "Mojaiskata Liniya Oboroni, Second Line"
   SOV_forts_mojaisk_line_third:0 "Mojaiskata Liniya Oboroni, Third Line"
