--- a/localisation/english/ideas_l_english.yml
+++ b/localisation/english/ideas_l_english.yml
@@ -2723,6 +2723,7 @@
  SOV_ukrain_prom_compleks:0 "Ukrain PromCompleks"
  SOV_making_use_of_the_storehouse_of_russia:0 "Making Use of the Storehouse of Russia"
  SOV_summer_defencive_buff:0 "Soviet Defence In-Depth"
+ SOV_1941_defencive_buff:0 "Soviet 1941 Defencive Buff"
  GER_summer_offencive_buff:0 "Axis Summer Offencive Buff"
 
 
