--- a/localisation/english/decisions_l_english.yml
+++ b/localisation/english/decisions_l_english.yml
@@ -400,6 +400,16 @@
   GER_blame_the_nosies:0 "Blame the Nosies"
   GER_build_questiobable_camps:0 "Build Questionable Camps"
 
+  GER_start_evacuate_ukranian_industry:0 "Start Ukrain PromKompleks Evacuation"
+  GER_stop_evacuate_ukranian_industry:0 "Stop Ukrain PromKompleks Evacuation"
+  GER_evacuate_ukranian_civilian_industry_mission:0 "Ukrain £civ_factory §HCivs§! Evacuation in progress..."
+  GER_evacuate_ukranian_military_industry_mission:0 "Ukrain £mil_factory §GMils§! Evacuation in progress..."
+
+  GER_start_evacuate_soviet_industry:0 "Start European USSR Part Evacuation"
+  GER_stop_evacuate_soviet_industry:0 "Stop European USSR Part Evacuation"
+  GER_evacuate_soviet_civilian_industry_mission:0 "European USSR Part £civ_factory §HCivs§! Evacuation in progress..."
+  GER_evacuate_soviet_military_industry_mission:0 "European USSR Part £mil_factory §GMils§! Evacuation in progress..."
+
   GER_start_tact_bomber_production:0 "Start producting tactical bombers"
   GER_stop_tact_bomber_production:0 "Stop producting tactical bombers"
   GER_start_tact_bomber_production_mission:0 "Next batch is expected in..."
