--- a/localisation/english/ic_events_l_english.yml
+++ b/localisation/english/ic_events_l_english.yml
@@ -34,3 +34,14 @@
  ic_sov_events.1.a:0 "Enforce Nothern Front"
  ic_sov_events.1.b:0 "Enforce Center Front"
  ic_sov_events.1.c:0 "Enforce South Front"
+
+ #ic_ger_events
+ ic_ger_events.1.t:0 "Barbarossa: First Successes"
+ ic_ger_events.1.d:0 ""
+ ic_ger_events.1.a:0 "We'll proceed on pushing!'"
+ ic_ger_events.2.t:0 "Barbarossa: Moderate Success"
+ ic_ger_events.2.d:0 ""
+ ic_ger_events.2.a:0 "We'll proceed on pushing!'"
+ ic_ger_events.3.t:0 "Barbarossa: Total Success"
+ ic_ger_events.3.d:0 ""
+ ic_ger_events.3.a:0 "Everything went according to the plan!"
