--- a/localisation/english/horsttool_l_english.yml
+++ b/localisation/english/horsttool_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_russian:
+﻿l_english:
  annex_manual_override:0 "Требования к решению о аннексии переопределены с помощью инструмента хоста."
  ST_STATE_MARK_FOR_TRANSFER:0 "§HОтметить регион для предачи§!\nОтметьте выбранный регион, что бы он мог быть передан \n"
  ST_STATE_UNMARK_FOR_TRANSFER:0 "§HОтменить выбор региона§!\nУбирает отметку с выбраного региона\n"
