added axis research group

--- a/localisation/english/technology_sharing_l_english.yml
+++ b/localisation/english/technology_sharing_l_english.yml
@@ -119,3 +119,6 @@
  BRA_USA_tech_sharing_group_desc: "The United States and Brazil have agreed to pool their scientific knowledge following maneuvers by the Brazilian government to work more closely with its northern neighbor on matters of foreign policy."
  BRA_south_american_tech_sharing_group_name: "Latin American Research Council"
  BRA_south_american_tech_sharing_group_desc: "The nations of Latin America have agreed to pool their scientific knowledge for mutual benefit of the region."
+
+ ic_axis_research_name:0 "Esports Research Group"
+ ic_axis_research_desc:0 "Esports Research Group desc"
