--- a/localisation/english/loading_tips_l_english.yml
+++ b/localisation/english/loading_tips_l_english.yml
@@ -9,4 +9,4 @@
  LOADING_TIP_7: "You guys lost Afrika in two month, LOL\n- Khan Faso -"
  LOADING_TIP_8: "Everyone's gangsta untill Russia hits MASSPRODUCTION."
  LOADING_TIP_9: "Hohli...\n- Unknown Kharkiv citizen -"
- LOADING_TIP_10: "Ne budi liho, poka ono tiho. - Let sleeping dog lie.\n- Russian saying -"
+ LOADING_TIP_10: "Ne budi liho, poka tiho. - Let sleeping dog lie.\n- Russian saying -"
