jlomka modding fix

--- a/localisation/english/traits_l_english.yml
+++ b/localisation/english/traits_l_english.yml
@@ -1609,3 +1609,4 @@
  minister_of_proparanda:0 "Minister of propaganda"
  fuhrers_fireman:0 "Fuhrers Fireman"
  speer_trait:0 "Mils Reorganizer"
+ defender_trait:0 "National Defender"
