--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -162,8 +162,8 @@ GER_rubber_3:0 "Rubber 3"
 GER_ss_regiments:0 "SS Regiments"
 ic_GER_army_innovation:0 "Army Innovation"
 GER_get_them_milzz:0 "Get them Milzz"
-GER_aa_defences_of_life_important_industry:0 "AA Defences of Life Important Industry"
-GER_aa_defences_of_remnants_of_the_reich:0 "AA Defences of Remnants of the Reich"
+GER_aa_defences_of_the_reich:0 "AA Defences of The Reich"
+GER_aa_defences_of_the_atlantikwall:0 "AA Defences of Atlantikwall"
 GER_new_main_tank:0 "New Main Tank"
 GER_auxiliary_tanks:0 "Auxiliary Tanks"
 GER_further_tank_improvements:0 "Further Tank Improvements"
