added progon decisions

--- a/localisation/english/ic_decisions_l_english.yml
+++ b/localisation/english/ic_decisions_l_english.yml
@@ -12,28 +12,13 @@
   SOV_secure_south_1941_tip:0 "Show states affected by \n§HSoviet South Defence In-Depth§!"
   SOV_ukrain_promkompleks_tip:0 "Show states affected by §HUkrain PromKomplect§!"
   SOV_russian_storehouse_tip:0 "Show states affected by §HRussian Storehouse§!"
-  SOV_debug_cze:0 "debug thingy for CZE annex"
-  SOV_debug_pol:0 "debug thingy for baltiks, pol and bessarabia"
 
 
-  ic_pp_waste:0 "§HPP WASTE SECTION§!"
-  ic_pp_waste_desc:0 "§gThose decisions will help you to waste infinite PP by impoving your industry§!"
-  production_efforts:0 "Production effort"
-  industrialization_efforts:0 "Industrialization effort"
-  research_bonus_effort:0 "Invest in the research"
-  production_effort:0 "Production effort"
-  industrialization_effort:0 "Industrialization effort"
-  invest_in_research:0 "Invest in the research"
-  invest_in_military_staff:0 "invest in the military staff"
-  invest_in_arms_factory:0 "Invest in arms factories"
-  invest_in_arms_factory_desc:0 "Available every 180 days"
-  invest_in_civ_industries:0 "Invest in the civilian factories"
-  invest_in_civ_industries_desc:0 "Available every 180 days"
-  invest_in_shipyards:0 "Invest in the shipyards"
-  shipyard_investment:0 "Shipyard Investment"
-  supply_buildup_cancel:0 "Cancel Logistical Preparations"
-  supply_buildup:0 "Logistical Preparations"
-
+  ic_progon_mode:0 "§HPROGON MODE§"
+  ic_progon_mode_aus:0 "progon thingy for AUS annex"
+  ic_progon_mode_cze:0 "progon thingy for CZE annex"
+  ic_progon_mode_pol:0 "progon thingy for WW2 start"
+  ic_progon_mode_ww2_simulation:0 "progon thingy for GER europe conquest and SOV prewar annexes"
 
   SOV_great_patriotic_war_category:0 "§RGREAT PATRIOTIC WAR§!"
   SOV_great_patriotic_war_category_desc:0 "_"
