--- a/localisation/english/ic_research_l_english.yml
+++ b/localisation/english/ic_research_l_english.yml
@@ -10,3 +10,12 @@
  tech_flamethrower_sppt3_desc:0 "Improved weapons increases combat effectiveness."
  tech_flamethrower_sppt4:0 "Flamethrower Company IV"
  tech_flamethrower_sppt4_desc:0 "Advanced training provides the strategic edge."
+
+ decimetric_radar:0 "Decimetric Radar"
+ decimetric_radar_desc:0 "Many units rely on the element of surprise for their efficiency. Development of decimetric radar allows us to deprive them of this advantage."
+ improved_decimetric_radar:0 "Improved Decimetric Radar"
+ improved_decimetric_radar_desc:0 "The use of radar has already proven crucial, but our decimetric radar sets are too few to ensure good coverage. Fitting more units with radar will allow us to maximize our technological edge."
+ improved_centimetric_radar:0 "Improved Centimetric Radar"
+ improved_centimetric_radar_desc:0 "Introducing cutting-edge radar techniques like monopulse radars in key operations will allow for extreme tracking accuracy."
+ advanced_centimetric_radar:0 "Advanced Centimetric Radar"
+ advanced_centimetric_radar_desc:0 "Despite our advanced radars, there are still ways for the enemy to avoid detection. New developments like the Pulse-Doppler radar allows us to eliminate many of these limitations in our equipment."
