--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -180,3 +180,35 @@ GER_barbarossa_big_succeses:0 "Barbarossa Big Succeses"
 GER_quality_tanks:0 "Quality Tanks"
 GER_quantity_tanks:0 "Quantity Tanks"
 GER_plan_new_summer_offencive:0 "Plan New Summer Offencive"
+
+
+
+ENG_initial_focus:0 "Initial Focus"
+ENG_spawn_civs:0 "Civilian industry"
+ENG_keeping_up_with_germans:0 "Keeping up with Germans"
+ENG_industrial_heartland_of_the_empire:0 "Industrial Heartland of the Empire"
+ENG_birmingham_small_arms_company:0 "Birmingham Small Arms Company"
+ENG_reinforce_commonwealth:0 "Reinforce Commonwealth"
+ENG_raj:0 "Invest into Raj"
+ENG_australia:0 "Invest into Australia"
+ENG_malaya_resources_base:0 "Malaya Resources Base"
+ENG_saf:0 "Invest into South Africa"
+ENG_canada:0 "Invest into Canada"
+ENG_shadow_scheme:0 "Shadow Scheme"
+ENG_sea_is_our_speciality:0 "Sea is our speciality"
+ENG_dockyards:0 "Naval expansion"
+ENG_naval_guns:0 "Bigger Guns"
+ENG_heavy_ships:0 "Bigger Ship"
+ENG_light_ships:0 "Smaller Ships"
+ENG_navys_at_queens_command:0 "Navis at Queens Command"
+ENG_british_army:0 "British Army"
+ENG_6_pounder:0 "6 pounder"
+ENG_english_infantrymen:0 "English Infantrymen"
+ENG_fortification:0 "Empire Fortification"
+ENG_french_military_cooperation:0 "French Military Cooperation"
+ENG_research_slot_focus:0 "Research Slot"
+ENG_raf:0 "RAF"
+ENG_material_base_destruction_plane:0 "Material Base Destruction Plane"
+ENG_announce_competition_for_modern_figher:0 "Announce Competition for Modern Figher"
+ENG_joint_air_exercises:0 "Joint Air Exercises"
+ENG_indiscriminate_bombing_policy:0 "Indiscriminate Bombing Policy"
