--- a/localisation/english/ic_ideas_l_english.yml
+++ b/localisation/english/ic_ideas_l_english.yml
@@ -62,3 +62,11 @@
  ic_ger_barb_stall_1:0 "Blitzkrieg stalls!"
  ic_ger_barb_stall_2:0 "Blitzkrieg stalls!"
  ic_ger_barb_stall_3:0 "Blitzkrieg stalls: 1942 Summer Offencive Failed"
+
+
+
+
+ ic_ENG_commonwealth_buff:0 "Commonwealth Ties"
+ ic_ENG_french_military_cooperation_idea:0 "French Military Cooperation"
+ ic_ENG_joint_air_exercises_idea:0 "Joint Air Eexercises"
+ ic_ENG_shadow_scheme_idea:0 "Shadow Scheme"
