added world tension

--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -150,7 +150,7 @@ GER_anshluss:0 "Anschluß"
 ic_GER_anshluss_spawn_ins_tt:0 "Spawns 40 inf divisions of the latest equipment"
 GER_sudetenland:0 "Sudetenland"
 GER_cze_annex:0 "Fate of Czechoslovakia"
-ic_GER_anshluss_spawn_ins_tt:0 "Spawns 4 tank divisions of the latest equipment"
+ic_GER_cze_spawn_ins_tt:0 "Spawns 4 tank divisions of the latest equipment"
 GER_expand_lebensraum:0 "Expand Lebensraum"
 
 GER_air_innovations:0 "Air Innovations"
