--- a/localisation/english/ic_decisions_l_english.yml
+++ b/localisation/english/ic_decisions_l_english.yml
@@ -138,3 +138,13 @@
   GER_summer_offencive_moscau_mission:0 "Aim: Moscau"
   GER_prep_summer_offencive_stalingrad:0 "Prep Summer Offencive on Stalingrad"
   GER_summer_offencive_stalingrad_mission:0 "Aim: Stalingrad"
+
+
+
+  ENG_forts_category:0 "§HEmpire Fortification§!"
+  ENG_gibraltar_forts:0 "Rock Defences"
+  ENG_malta_forts:0 "The Middeterenian Outpost"
+  ENG_suez_forts:0 "Suez Anti-Naval Invasion"
+  ENG_syria_forts:0 "Syria Anti-Naval Invasion"
+  ENG_prep_egypt:0 "Suez Fortification"
+  ENG_prep_malaya:0 "Prepare Malaya"
