forts in africa, ports in singapore NUDGER fix decisions for ENG to build forts, new GFX, Chamberlain now comes

--- a/localisation/english/ic_events_l_english.yml
+++ b/localisation/english/ic_events_l_english.yml
@@ -45,3 +45,10 @@
  ic_ger_events.3.t:0 "Barbarossa: Total Success"
  ic_ger_events.3.d:0 ""
  ic_ger_events.3.a:0 "Everything went according to the plan!"
+
+
+
+ #ic_eng_events
+ ic_eng_events.1.t:0 "Neville Chamberlain becomes new Prime Minister"
+ ic_eng_events.1.d:0 "Awesome"
+ ic_eng_events.1.a:0 "Lovely innit fucking faggot"
