--- a/localisation/english/ic_characters_l_english.yml
+++ b/localisation/english/ic_characters_l_english.yml
@@ -41,3 +41,4 @@ ic_SOV_mikhail_kalinin:0 "Mikhail Kalinin"
 ic_SOV_nikita_khrushchyov:0 "Nikita Khrushchyov"
 ic_SOV_nikolay_voznesensky:0 "Nikolay Voznesensky"
 ic_SOV_genrikh_yagoda:0 "Genrikh Yagoda"
+ic_SOV_ivan_larionov:0 "Ivan Larionov"
