--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -90,8 +90,8 @@ SOV_mio_upgrade_1:0 "Sponsoring KB"
 SOV_mio_upgrade_1_desc:0 ""
 SOV_rockets:0 "Thermite experiments"
 SOV_rockets_desc:0 ""
-SOV_i_16:0 "I-16"
-SOV_i_16_desc:0 ""
+SOV_revising_i_16:0 "Revising I-16"
+SOV_revising_i_16_desc:0 ""
 SOV_strati:0 "Long going aircrafts"
 SOV_strati_desc:0 ""
 SOV_soveit_airplane_school:0 "Soveit airplane school"
