--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -207,8 +207,10 @@ ENG_english_infantrymen:0 "English Infantrymen"
 ENG_fortification:0 "Empire Fortification"
 ENG_french_military_cooperation:0 "French Military Cooperation"
 ENG_research_slot_focus:0 "Research Slot"
+ENG_research_buff_focus:0 "Beat their "Wunderwaffe""
 ENG_raf:0 "RAF"
 ENG_material_base_destruction_plane:0 "Material Base Destruction Plane"
 ENG_announce_competition_for_modern_figher:0 "Announce Competition for Modern Figher"
 ENG_joint_air_exercises:0 "Joint Air Exercises"
 ENG_indiscriminate_bombing_policy:0 "Indiscriminate Bombing Policy"
+ENG_our_second_key_to_survive:0 "Our Second Key to Survive"
