more gfx/loc fixes

--- a/localisation/english/ic_characters_l_english.yml
+++ b/localisation/english/ic_characters_l_english.yml
@@ -1,44 +1,4 @@
 ﻿l_english:
-
-ic_SOV_iosif_stalin:0 "Iosif Stalin"
-ic_SOV_georgy_zhukov:0 "Georgy Zhukov"
-ic_SOV_konstantin_rokossovsky:0 "Konstantin Rokossovsky"
-ic_SOV_aleksandr_vasilevsky:0 "Aleksandr Vasilevsky"
-ic_SOV_boris_shaposhnikov:0 "Boris Shaposhnikov"
-ic_SOV_nikolay_vatutin:0 "Nikolay Vatutin"
-ic_SOV_ivan_konev:0 "Ivan Konev"
-ic_SOV_semyon_timoshenko:0 "Semyon Timoshenko"
-ic_SOV_kliment_voroshilov:0 "Kliment Voroshilov"
-ic_SOV_mikhail_tukhachevsky:0 "Mikhail Tukhachevsky"
-ic_SOV_semyon_budyonny:0 "Semyon Budyonny"
-ic_SOV_ivan_chernyakhovsky:0 "Ivan Chernyakhovsky"
-ic_SOV_issa_pliyev:0 "Issa Pliyev"
-ic_SOV_leonid_govorov:0 "Leonid Govorov"
-ic_SOV_grigory_kulik:0 "Grigory Kulik"
-ic_SOV_kirill_meretskov:0 "Kirill Meretskov"
-ic_SOV_filipp_golikov:0 "Filipp Golikov"
-ic_SOV_andrey_yeryomenko:0 "Andrey Yeryomenko"
-ic_SOV_georgy_zakharov:0 "Georgy Zakharov"
-ic_SOV_yakov_cherevichenko:0 "Yakov Cherevichenko"
-ic_SOV_maks_reyter:0 "Maks Reyter"
-ic_SOV_nikandr_chibisov:0 "Nikandr Chibisov"
-ic_SOV_vasily_kuznetsov:0 "Vasily Kuznetsov"
-ic_SOV_andrey_vlasov:0 "Andrey Vlasov"
-ic_SOV_ivan_fedyuninsky:0 "Ivan Fedyuninsky"
-ic_SOV_maksim_purkayev:0 "Maksim Purkayev"
-ic_SOV_kuzma_galitsky:0 "Kuzma Galitsky"
-ic_SOV_markian_popov:0 "Markian Popov"
-ic_SOV_nikolay_berzarin:0 "Nikolay Berzarin"
-ic_SOV_aleksandr_gorbatov:0 "Aleksandr Gorbatov"
-ic_SOV_kirill_moskalenko:0 "Kirill Moskalenko"
-ic_SOV_dmitry_lelyushenko:0 "Dmitry Lelyushenko"
-ic_SOV_andrey_grechko:0 "Andrey Grechko"
-ic_SOV_rodion_malinovsky:0 "Rodion Malinovsky"
-ic_SOV_vasily_chuykov:0 "Vasily Chuykov"
-ic_SOV_nikolay_kuznetsov:0 "Nikolay Kuznetsov"
-ic_SOV_aleksandr_novikov:0 "Aleksandr Novikov"
-ic_SOV_mikhail_kalinin:0 "Mikhail Kalinin"
-ic_SOV_nikita_khrushchyov:0 "Nikita Khrushchyov"
-ic_SOV_nikolay_voznesensky:0 "Nikolay Voznesensky"
-ic_SOV_genrikh_yagoda:0 "Genrikh Yagoda"
+ic_SOV_dmitry_pavlov:0 "Dmitry Pavlov"
+ic_SOV_yuri_levitan:0 "Yuri Levitan"
 ic_SOV_ivan_larionov:0 "Ivan Larionov"
