--- a/localisation/english/ic_traits_l_english.yml
+++ b/localisation/english/ic_traits_l_english.yml
@@ -1,4 +1,12 @@
 ﻿l_english:
+
+ air_chief_reform_4:0 "Air Reformer\n(Esporter)"
+ air_chief_safety_4:0 "Air Safety\n(Esporter)"
+ air_chief_night_operations_4:0 "Night Operations\n(Esporter)"
+ air_chief_ground_support_4:0 "Ground Support\n(Esporter)"
+ air_chief_all_weather_4:0 "All-Weather\n(Esporter)"
+ air_bomber_interception_4:0 "Bomber Interception\n(Esporter)"
+
  stalin_eblan:0 "Inflexible Politic"
  popular_figurehead_kalinin:0 "Communist mass organiser"
  stalins_horn:0 "Stalins Translator"
