--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -185,6 +185,7 @@ GER_plan_new_summer_offencive:0 "Plan New Summer Offencive"
 
 ENG_initial_focus:0 "Initial Focus"
 ENG_spawn_civs:0 "Civilian industry"
+ENG_issue_gasmasks:0 "Issue Gasmasks"
 ENG_keeping_up_with_germans:0 "Keeping up with Germans"
 ENG_industrial_heartland_of_the_empire:0 "Industrial Heartland of the Empire"
 ENG_birmingham_small_arms_company:0 "Birmingham Small Arms Company"
@@ -206,6 +207,7 @@ ENG_6_pounder:0 "6 pounder"
 ENG_english_infantrymen:0 "English Infantrymen"
 ENG_fortification:0 "Empire Fortification"
 ENG_french_military_cooperation:0 "French Military Cooperation"
+ENG_general_command_staff:0 "General Command Staff"
 ENG_research_slot_focus:0 "Research Slot"
 ENG_research_buff_focus:0 "Beat their "Wunderwaffe""
 ENG_raf:0 "RAF"
