--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -216,3 +216,7 @@ ENG_announce_competition_for_modern_figher:0 "Announce Competition for Modern Fi
 ENG_joint_air_exercises:0 "Joint Air Exercises"
 ENG_indiscriminate_bombing_policy:0 "Indiscriminate Bombing Policy"
 ENG_our_second_key_to_survive:0 "Our Second Key to Survive"
+
+
+
+ic_ROM_italian_ammunication_tt:0 "§YIf Italy has researched GUN II, Romania will recieve significant stockpile reinforcements§"
