--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -220,3 +220,5 @@ ENG_our_second_key_to_survive:0 "Our Second Key to Survive"
 
 
 ic_ROM_italian_ammunication_tt:0 "§YIf Italy has researched GUN II, Romania will recieve significant stockpile reinforcements§"
+ic_ROM_visit_Denitz_in_Romania_tt:0 "§YDoenitz is paying a visit to Romania and you're annoyed with him as a naval adviser§"
+ic_ROM_open_focus_romania_tt:0 "§YOpens tricks for declaring war on Yugoslavia and Greece§"
