--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -222,3 +222,4 @@ ENG_our_second_key_to_survive:0 "Our Second Key to Survive"
 ic_ROM_italian_ammunication_tt:0 "§YIf Italy has researched GUN II, Romania will recieve significant stockpile reinforcements§"
 ic_ROM_visit_Denitz_in_Romania_tt:0 "§YDoenitz is paying a visit to Romania and you're getting him as a naval advisor§"
 ic_ROM_open_focus_romania_tt:0 "§YOpens tricks for declaring war on Yugoslavia and Greece§"
+ic_ROM_the_transition_to_military_rails_tt:0 "§YRomania's Minister of Military Economy takes over the entire industry§"
