ww2 forced by event on 1.09.1939

--- a/localisation/english/ic_events_l_english.yml
+++ b/localisation/english/ic_events_l_english.yml
@@ -25,6 +25,10 @@
  ic_news.1.a:0 "I guess they just wann know their friends close..."
  ic_news.1.b:0 "Doesnt have to be SO loud!"
  ic_news.1.c:0 "Take it easy, we dont want war!"
+
+ ic_news.2.t:0 "Germany violates Polish border"
+ ic_news.2.d:0 ""
+ ic_news.2.a:0 "And so it begins..."
  
  
  
