returned hun focus loc

--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -216,3 +216,60 @@ ENG_announce_competition_for_modern_figher:0 "Announce Competition for Modern Fi
 ENG_joint_air_exercises:0 "Joint Air Exercises"
 ENG_indiscriminate_bombing_policy:0 "Indiscriminate Bombing Policy"
 ENG_our_second_key_to_survive:0 "Our Second Key to Survive"
+
+
+
+
+
+HUN_A_new_way:0 "A New Way" 
+HUN_Economic_intervention:0 "Economic Intervention"
+HUN_Rebuilt_Infrastructure:0 "Rebuilt Infrastructure"
+HUN_Support_domestic_industry:0 "Support Domestic Industry"
+HUN_Support_urbanization:0 "Support Urbanization"
+HUN_Invite_foreign_investors:0 "Invite Foreign Investors"
+HUN_From_our_depths:0 "From Our Depths"
+HUN_Establish_new_university:0 "Establish New Univesity"
+HUN_German_technology:0 "German Technology"
+HUN_Strenghten_fascists:0 "Strenghten_Fascists"
+HUN_Italian_engineers:0 "Italian Engineers"
+HUN_Japanese_innovativennes:0 "Japanese Innovativennes"
+HUN_Domestic_arms_industry:0 "Domestic Arms Industry"
+HUN_Better_steel_for_the_best_weapon:0 "Better Steel for the Best Weapon"
+HUN_Militarized_economy:0 "Militarized Economy"
+HUN_No_one_will_sit_idle:0 "No One Will Sit Idle"
+HUN_Renounce_the_Treaty_of_Trianon:0 "Renounce the Treaty of Trianon"
+HUN_dream_about_great_hungary:0 "Dream about Great Hungary"
+HUN_Reclaim_Slovakia:0 "Reclaim Slovakia"
+HUN_Reclaim_Transilvania:0 "Reclaim Transilvania"
+HUN_Reclaim_Voevodina:0 "Reclaim Voevodina"
+HUN_Proclame_Great_Hungary:0 "Proclame Great Hungary"
+HUN_Crush_potential_rebels:0 "Crush Potential Rebels"
+HUN_Fuel_for_Germany:0 "Fuel for Germany"
+HUN_Hungarian_SS:0 "Hungarian SS"
+HUN_Hungarian_Workers:0 "Hungarian Workers"
+HUN_Secret_rearmament:0 "Secret Rearmament"
+HUN_Establish_field_artillery:0 "Establish Field Artillery"
+HUN_New_infantry_weapons:0 "New Infantry Weapon"
+HUN_Develop_Military_logistics:0 "Develop Military Logistics"
+HUN_German_Advisors:0 "German Advisors"
+HUN_Special_forces:0 "Special Forces"
+HUN_encourage_aggressive_tactics:0 "Encourage Aggressive Tactics"
+HUN_Shovel_as_second_weapon:0 "Shovel as Second Weapon"
+HUN_always_march_forward:0 "Always March Forward"
+HUN_Invincible_moral:0 "Invincible Moral"
+HUN_Elite_forces:0 "Elite Forces"
+HUN_Every_man_is_a_soldier:0 "Every Man is a Soldier"
+HUN_Equipment_standart:0 "Equipment Standart"
+HUN_Don't_neglect_artillery:0 "Don't Neglect Artillery"
+HUN_God_of_war:0 "God of War"
+HUN_Support_battalions:0 "Support Battalions"
+HUN_Totalis_haboru:0 "Totalis Haboru"
+HUN_A_New_Way_of_War:0 "A New Way of War"
+HUN_Cavalry_is_in_the_past:0 "Cavalry is in the Past"
+HUN_Maintainance_and_Supply:0 "Maintainance and Supply"
+HUN_Armored_Infantry_Carriers:0 "Armored Infantry Carriers"
+HUN_Strong_armor_and_powerful_guns:0 "Strong Armor and Powerful Guns"
+HUN_All_efforts_on_tanks:0 "All Effort on Tanks"
+HUN_hungarian_oil:0 "Hungarian Oil?"
+HUN_From_a_drop_into_the_sea:0 "From a Drop into the Sea"
+HUN_Aluminium_for_Germany:0 "Aluminium for Germany"
