Focus + GFX on ROM,USA

--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -277,7 +277,7 @@ ic_ROM_Industrialization:0 "Industrialization"
 ic_ROM_light_industry:0 "Light industry"
 ic_ROM_heavy_industry:0 "Heavy industry"
 ic_ROM_Agrarian_reform:0 "Agrarian reform"
-ic_ROM_Agrarian_reform2:0 "Increased birth rate"
+ic_ROM_Agrarian_reforms:0 "Increased birth rate"
 ic_ROM_Malaxa:0 "Malaxa"
 ic_ROM_Steel_shortage:0 "Steel shortage"
 ic_ROM_Infra_for_steel_and_alum:0 "Infra"
@@ -338,7 +338,7 @@ ic_USA_The_best_bomber:0 "The best bomber"
 ic_USA_The_equivalent_of_a_Spitfire:0 "The equivalent of a Spitfire"
 ic_USA_CAS:0 "CAS"
 ic_USA_pacifbomber:0 "Pacifbomber"
-ic_USA_us_air_force:0 "US air force"
+ic_USA_us_air_force:0 "US Air Force"
 ic_USA_Two_ocean_navy_act:0 "Two ocean navy act"
 ic_USA_Martime_commission:0 "Martime commission"
 ic_USA_Bureau_of_ships:0 "Bureau of ships"
@@ -360,3 +360,4 @@ ic_USA_operation_torch:0 "Operation torch"
 ic_USA_Day_D:0 "Day D"
 ic_USA_Operation_Husky:0 "Operation Husky"
 ic_USA_liberty_ships:0 "Liberty ships"
+ic_USA_neutrality_act:0 "Neutrality act"
