localisation character rom

--- a/localisation/english/ic_characters_l_english.yml
+++ b/localisation/english/ic_characters_l_english.yml
@@ -2,3 +2,7 @@
 ic_SOV_dmitry_pavlov:0 "Dmitry Pavlov"
 ic_SOV_yuri_levitan:0 "Yuri Levitan"
 ic_SOV_ivan_larionov:0 "Ivan Larionov"
+
+
+
+ic_ROM_Michael_Romniceanu:0 "Michael Romniceanu"
