--- a/localisation/english/ic_ideas_l_english.yml
+++ b/localisation/english/ic_ideas_l_english.yml
@@ -97,3 +97,4 @@
  ic_ROM_Agrarian_reform:0 "Agrarian reform"
  ic_ROM_Agrarian_reform2:0 "Agrarian reform"
  ic_ROM_Navy_romania:0 "Navy romania"
+ ic_ROM_ss_idea:0 "SS"
