--- a/localisation/english/ic_characters_l_english.yml
+++ b/localisation/english/ic_characters_l_english.yml
@@ -6,3 +6,4 @@ ic_SOV_ivan_larionov:0 "Ivan Larionov"
 
 
 ic_ROM_Michael_Romniceanu:0 "Michael Romniceanu"
+ic_ROM_ioan_antonescu:0 "Ioan Antonescu"
