--- a/localisation/english/ic_ideas_l_english.yml
+++ b/localisation/english/ic_ideas_l_english.yml
@@ -73,3 +73,10 @@
  ic_ENG_queens_navy_idea:0 "Queens Navy"
  ic_ENG_shadow_scheme_idea:0 "Shadow Scheme"
  ic_ENG_fighter_cheaper:0 "Winged Protectors of the Isle"
+
+
+
+
+
+ ic_ITA_building_up_colonies:0 "Building up Colonies"
+ ic_ITA_building_up_colonies_bonus:0 "Colonies pay off!"
