--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -216,3 +216,11 @@ ENG_announce_competition_for_modern_figher:0 "Announce Competition for Modern Fi
 ENG_joint_air_exercises:0 "Joint Air Exercises"
 ENG_indiscriminate_bombing_policy:0 "Indiscriminate Bombing Policy"
 ENG_our_second_key_to_survive:0 "Our Second Key to Survive"
+
+
+
+
+ITA_build_up_colonies:0 "Build up Colonies"
+ITA_build_up_colonies_tt:0 "After losing "§Y$ic_ITA_building_up_colonies$§!" idea you will recieve "§Y$ic_ITA_building_up_colonies_bonus$§!" idea for §Y545§! days."
+
+ITA_reorganize_retards_tt:0 "§CWill start a chain of Military Reorganization of 6 debuffs, each of which will be removing one after another every 180 days (in total will take 1080 days = 3 years)§"
