GFX for focus rom and MIO localisation

--- a/localisation/english/ic_focus_l_english.yml
+++ b/localisation/english/ic_focus_l_english.yml
@@ -237,8 +237,11 @@ ic_ROM_More_more_oil:0 "More more oil!"
 ic_ROM_The_Black_Sea_-_Romania:0 "Black Sea-Romania"
 ic_ROM_Modern_support_compaines:0 "Modern support compaines"
 ic_ROM_German_first_aid_kits_and_stews:0 "German first aid kits and stews"
+ic_ROM_German_first_aid_kits_and_stewstt:0 "§YThe German MIO will be available to you!§"
 ic_ROM_German_MP38_and_MG34:0 "German MP38 and MG34"
+ic_ROM_German_MP38_and_MG34tt:0 "§YThe German MIO will be available to you!§"
 ic_ROM_German_leFH18:0 "German leFH18"
+ic_ROM_German_leFH18tt:0 "§YThe German MIO will be available to you!§"
 ic_ROM_The_Hungarian_Romanian_War:0 "The Hungarian Romanian War"
 ic_ROM_The_true_descendants_of_the_Romans:0 "The true descendants the Romans"
 ic_ROM_The_Iron_Guard:0 "The Iron Guard"
