--- a/localisation/english/ic_military_industrial_organization_l_english.yml
+++ b/localisation/english/ic_military_industrial_organization_l_english.yml
@@ -1,5 +1,6 @@
 ﻿l_english:
 
 
- ROM_mauser_organization: "$mauser$"
- ROM_rheinmetall_organization: "$rheinmetall$"
+ROM_mio_German_leFH18: "German leFH18"
+ROM_mio_first_aid_kits_and_stews: "First aid kits and stews"
+ROM_mio_mp34_mp40: "German MG34 MP40"
