--- a/localisation/english/ic_decisions_l_english.yml
+++ b/localisation/english/ic_decisions_l_english.yml
@@ -4,6 +4,8 @@
   SOV_optimal_building_line:0 "Optimal starting building line"
   GER_optimal_building_line:0 "Optimal starting building line"
   ENG_optimal_building_line:0 "Optimal starting building line"
+  USA_optimal_building_line:0 "Optimal starting building line"
+  ITA_optimal_building_line:0 "Optimal starting building line"
 
   SOV_faq_event:0 "faq - SOV"
   GER_faq_event:0 "faq - GER"
