moved katusha to speacial projects, slight sov pp-wise buff

--- a/localisation/english/ic_sp_loc_l_english.yml
+++ b/localisation/english/ic_sp_loc_l_english.yml
@@ -15,5 +15,13 @@
 
 
 
+ 
+
+ ic_sp_motorized_rocket_arty:0 "BM-13"
+ ic_sp_motorized_rocket_arty_desc:0 "Katyusha"
+
+
+
+
  ic_scientist_trait_fighter_armament:0 "Fighter Armament Specialist"
  ic_scientist_trait_aircraft_genius:0 "Aircraft Genuis"
